[package]
name = "nioca"
version = "0.4.3"
edition = "2021"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "Apache-2.0"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
aes = "0.8"
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std", "zeroize"] }
async-trait = "0.1"
axum = { version = "0.6", features = ["headers", "http2"] }
axum-extra = { version = "0.8", features = ["cookie"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "0.21"
bincode = "1.3"
cached = { version = "0.46", features = ["async_tokio_rt_multi_thread"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.1", features = ["derive"] }
cron = "0.12"
der = { version = "0.7", features = ["std", "pem"] }
dotenvy = "0.15"
ecdsa = { version = "0.16", features = ["der", "pkcs8", "std", "pem", "signing"] }
ed25519 = { version = "2.1", features = ["pem", "pkcs8", "zeroize"] }
ed25519-dalek = { version = "2", features = ["pem", "pkcs8", "rand_core"] }
flume = "0.11"
headers = "0.3"
hex = "0.4"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
num_cpus = "1.15"
once_cell = "1.17"
p12 = "0.6"
p384 = { version = "0.13", features = ["ecdsa"] }
pem = "3"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = { version = "0.11.1", features = ["x509-parser", "zeroize"] }
regex = "1.7"
reqwest = { version = "0.11", default-features = false, features = ["brotli", "json", "rustls-tls", "rustls-tls-webpki-roots"] }
ring = "0.17"
rpassword = "7.2"
rsa = { version = "0.9.2", features = ["serde", "getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["macros", "migrate", "postgres", "runtime-tokio", "tls-rustls", "time", "uuid"] }
ssh-key = { version = "0.6", features = ["ed25519", "p256", "p384", "serde"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.26", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing"] }
utoipa = { version = "4", features = ["axum_extras", "openapi_extensions", "time", "uuid"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
x509-parser = { version = "0.15", features = ["ring", "validate", "verify"] }

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "*"

[build-dependencies]
# include 'tonic-build' for compiling *.proto files to rust modules
#tonic-build = "0.8.0"
